updated, replaced /cards with /columns

--- a/columns/css/columns.css
+++ b/columns/css/columns.css
@@ -1,48 +1,48 @@
-.floats {
+.floats .cards {
   font-size: 0;
 }
-.floats .card {
+.floats .cards .card {
   float: left;
   font-size: 1rem;
   margin-right: 5px;
   vertical-align: top;
   width: calc(25% - 6px);
 }
-.floats .card:last-child {
+.floats .cards .card:last-child {
   margin-right: 0;
 }
-.floats::after {
+.floats .cards::after {
   display: table;
   clear: both;
   content: '';
 }
-.inline-blocks {
+.inline-blocks .cards {
   font-size: 0;
 }
-.inline-blocks .card {
+.inline-blocks .cards .card {
   display: inline-block;
   font-size: 1rem;
   margin-right: 5px;
   vertical-align: top;
   width: calc(25% - 6px);
 }
-.inline-blocks .card:last-child {
+.inline-blocks .cards .card:last-child {
   margin-right: 0;
 }
-.flexbox {
+.flexbox .cards {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
 }
-.flexbox .card {
+.flexbox .cards .card {
   flex-basis: 0;
   flex-grow: 1;
   margin-right: 5px;
 }
-.flexbox .card:last-child {
+.flexbox .cards .card:last-child {
   margin-right: 0;
 }
-.grid {
+.grid .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(calc(25% - 5px), 1fr));
   grid-gap: 5px;
