updated color variables

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,22 @@
-@green: #55BA9E;
+@blue: #4D95D8;
+@gray: #EDF0F1;
+@green: #61CB77;
 @navy: #38485D;
 @off-white: #EFEFEF;
-@red: #B3432F;
+@orange: #DA8330;
+@purple: #925AB3;
+@red: #D85740;
+@slate: #98A4A6;
+@teal: #55BA9E;
+@yellow: #EBC643;
+
+@dark-blue: #3F7DB6;
+@dark-gray: #BEC3C6;
+@dark-green: #52AC65;
+@dark-navy: #2F3D4F;
+@dark-orange: #C65C24;
+@dark-purple: #8544A9;
+@dark-red: #B3432F;
+@dark-slate: #818C8D;
+@dark-teal: #479F86;
+@dark-yellow: #E9A138;
