--- a/grid_progressive/less/grid.less
+++ b/grid_progressive/less/grid.less
@@ -3,7 +3,7 @@ body {
     display: flex;
     flex-direction: column;
 
-    @supports (display: contents) {
+    @supports (display: contents) and (caret-color: transparent) {
       display: grid;
       grid-template-columns: auto 2fr auto;
       grid-template-rows: auto auto 1fr auto;
@@ -23,7 +23,7 @@ body {
   display: flex;
   flex-grow: 1;
 
-  @supports (display: contents) {
+  @supports (display: contents) and (caret-color: transparent) {
     display: contents;
   }
 }
@@ -32,7 +32,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  @supports (display: contents) {
+  @supports (display: contents) and (caret-color: transparent) {
     display: contents;
   }
 }
