--- a/grid-layout/less/layout.less
+++ b/grid-layout/less/layout.less
@@ -1,6 +1,11 @@
 body {
   @media (min-width: 601px) {
     display: grid;
+  }
+}
+
+.default {
+  @media (min-width: 601px) {
     grid-template-columns: auto 2fr auto;
     grid-template-rows: auto auto 1fr auto;
     grid-template-areas:
@@ -9,6 +14,114 @@ body {
       "sidebar-primary content sidebar-secondary"
       "sidebar-primary content-bottom sidebar-secondary"
       "footer footer footer"
+    ;
+    grid-gap: 0;
+  }
+}
+
+.alt1 {
+  @media (min-width: 601px) {
+    grid-template-columns: auto 2fr auto;
+    grid-template-rows: auto auto 1fr auto;
+    grid-template-areas:
+      "header header header"
+      "nav nav nav"
+      "sidebar-primary content sidebar-secondary"
+      "sidebar-primary content-bottom content-bottom"
+      "footer footer footer"
+    ;
+    grid-gap: 0;
+  }
+}
+
+.alt2 {
+  @media (min-width: 601px) {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto 1fr auto;
+    grid-template-areas:
+      "header header header"
+      "nav nav nav"
+      "content content content"
+      "sidebar-primary content-bottom sidebar-secondary"
+      "footer footer footer"
+    ;
+    grid-gap: 0;
+  }
+}
+
+.alt3 {
+  @media (min-width: 601px) {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto 1fr auto auto auto;
+    grid-template-areas:
+      "header header header"
+      "nav nav nav"
+      "content content content"
+      "content-bottom content-bottom content-bottom"
+      "sidebar-primary sidebar-primary sidebar-secondary"
+      "footer footer footer"
+    ;
+    grid-gap: 0;
+  }
+}
+
+.alt4 {
+  @media (min-width: 601px) {
+    grid-template-columns: auto 1fr 1fr;
+    grid-template-rows: auto auto 1fr auto auto auto;
+    grid-template-areas:
+      "sidebar-primary header header"
+      "sidebar-primary nav nav"
+      "sidebar-primary content content"
+      "sidebar-primary content-bottom content-bottom"
+      "sidebar-primary sidebar-secondary sidebar-secondary"
+      "sidebar-primary footer footer"
+    ;
+    grid-gap: 0;
+  }
+}
+
+.alt5 {
+  @media (min-width: 601px) {
+    grid-template-columns: 200px 1fr 1fr;
+    grid-template-rows: auto 1fr auto auto auto;
+    grid-template-areas:
+      "nav header header"
+      "nav content content"
+      "nav content-bottom content-bottom"
+      "nav sidebar-primary sidebar-secondary"
+      "nav footer footer"
+    ;
+    grid-gap: 0;
+  }
+}
+
+.alt6 {
+  @media (min-width: 601px) {
+    grid-template-columns: 200px 1fr 1fr 200px;
+    grid-template-rows: auto 1fr auto auto auto;
+    grid-template-areas:
+      "header . . ."
+      "nav content content ."
+      "nav content-bottom content-bottom ."
+      "nav sidebar-primary sidebar-secondary ."
+      "footer footer footer footer"
+    ;
+    grid-gap: 0;
+  }
+}
+
+.alt7 {
+  @media (min-width: 601px) {
+    grid-template-columns: 200px 1fr 1fr;
+    grid-template-rows: auto 1fr auto auto auto;
+    grid-template-areas:
+      "header . ."
+      ". nav nav"
+      ". content content"
+      ". content-bottom content-bottom"
+      ". sidebar-primary sidebar-secondary"
+      ". footer footer"
     ;
     grid-gap: 0;
   }
