--- a/grid-layout/less/style.less
+++ b/grid-layout/less/style.less
@@ -38,8 +38,24 @@ body {
   background-color: @dark-blue;
   grid-area: nav;
 
+  .alt5 &,
+  .alt6 & {
+    // display: flex;
+    // flex-direction: column;
+    display: block;
+  }
+
   &::before {
-    content: 'nav';
+    // content: 'nav';
+  }
+
+  a {
+    color: #FFF;
+
+    .alt5 &,
+    .alt6 & {
+      display: block;
+    }
   }
 }
 
