--- a/grid-layout/css/layout.css
+++ b/grid-layout/css/layout.css
@@ -7,7 +7,7 @@
   .default {
     grid-template-columns: auto 2fr auto;
     grid-template-rows: auto auto 1fr auto;
-    grid-template-areas: "header header header" "nav nav nav" "sidebar-primary content sidebar-secondary" "sidebar-primary content-bottom sidebar-secondary" "footer footer footer";
+    grid-template-areas: "blue blue blue" "dark-blue dark-blue dark-blue" "yellow content dark-yellow" "yellow gray dark-yellow" "red red red";
     grid-gap: 0;
   }
 }
@@ -15,7 +15,7 @@
   .alt1 {
     grid-template-columns: auto 2fr auto;
     grid-template-rows: auto auto 1fr auto;
-    grid-template-areas: "header header header" "nav nav nav" "sidebar-primary content sidebar-secondary" "sidebar-primary content-bottom content-bottom" "footer footer footer";
+    grid-template-areas: "blue blue blue" "dark-blue dark-blue dark-blue" "yellow content dark-yellow" "yellow gray gray" "red red red";
     grid-gap: 0;
   }
 }
@@ -23,7 +23,7 @@
   .alt2 {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto 1fr auto;
-    grid-template-areas: "header header header" "nav nav nav" "content content content" "sidebar-primary content-bottom sidebar-secondary" "footer footer footer";
+    grid-template-areas: "blue blue blue" "dark-blue dark-blue dark-blue" "content content content" "yellow gray dark-yellow" "red red red";
     grid-gap: 0;
   }
 }
@@ -31,7 +31,7 @@
   .alt3 {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto 1fr auto auto auto;
-    grid-template-areas: "header header header" "nav nav nav" "content content content" "content-bottom content-bottom content-bottom" "sidebar-primary sidebar-primary sidebar-secondary" "footer footer footer";
+    grid-template-areas: "blue blue blue" "dark-blue dark-blue dark-blue" "content content content" "gray gray gray" "yellow yellow dark-yellow" "red red red";
     grid-gap: 0;
   }
 }
@@ -39,7 +39,7 @@
   .alt4 {
     grid-template-columns: auto 1fr 1fr;
     grid-template-rows: auto auto 1fr auto auto auto;
-    grid-template-areas: "sidebar-primary header header" "sidebar-primary nav nav" "sidebar-primary content content" "sidebar-primary content-bottom content-bottom" "sidebar-primary sidebar-secondary sidebar-secondary" "sidebar-primary footer footer";
+    grid-template-areas: "yellow blue blue" "yellow dark-blue dark-blue" "yellow content content" "yellow gray gray" "yellow dark-yellow dark-yellow" "yellow red red";
     grid-gap: 0;
   }
 }
@@ -47,7 +47,7 @@
   .alt5 {
     grid-template-columns: 200px 1fr 1fr;
     grid-template-rows: auto 1fr auto auto auto;
-    grid-template-areas: "nav header header" "nav content content" "nav content-bottom content-bottom" "nav sidebar-primary sidebar-secondary" "nav footer footer";
+    grid-template-areas: "dark-blue blue blue" "dark-blue content content" "dark-blue gray gray" "dark-blue yellow dark-yellow" "dark-blue red red";
     grid-gap: 0;
   }
 }
@@ -55,7 +55,7 @@
   .alt6 {
     grid-template-columns: 200px 1fr 1fr 200px;
     grid-template-rows: auto 1fr auto auto auto;
-    grid-template-areas: "header . . ." "nav content content ." "nav content-bottom content-bottom ." "nav sidebar-primary sidebar-secondary ." "footer footer footer footer";
+    grid-template-areas: "blue . . ." "dark-blue content content ." "dark-blue gray gray ." "dark-blue yellow dark-yellow ." "red red red red";
     grid-gap: 0;
   }
 }
@@ -63,7 +63,8 @@
   .alt7 {
     grid-template-columns: 200px 1fr 1fr;
     grid-template-rows: auto 1fr auto auto auto;
-    grid-template-areas: "header . ." ". nav nav" ". content content" ". content-bottom content-bottom" ". sidebar-primary sidebar-secondary" ". footer footer";
+    grid-template-areas: "blue . ." ". dark-blue dark-blue" ". content content" ". gray gray" ". yellow dark-yellow" ". red red";
     grid-gap: 0;
   }
 }
+/*# sourceMappingURL=layout.css.map */
