--- a/columns_footer/css/style.css
+++ b/columns_footer/css/style.css
@@ -1,38 +1,32 @@
-.card {
-  background-color: #FFF;
-  border: 1px solid #E5E5E5;
+section {
+  padding-left: 200px;
+  padding-right: 200px;
+}
+.column {
+  box-sizing: border-box;
+  padding-left: 10px;
+  padding-right: 10px;
   position: relative;
 }
-.flexbox .card,
-.grid .card {
+.flexbox .column {
   display: flex;
   flex-direction: column;
 }
-.card-thumb {
-  max-width: 100%;
+.column h3 {
+  border-bottom: 1px solid #EDF0F1;
+  padding-bottom: 10px;
+  text-transform: uppercase;
 }
-.card-body {
-  padding: 0 20px 20px;
+.column ul {
+  list-style: square;
+  margin-top: 0;
+  padding-left: 1em;
 }
-.card-thumb {
-  width: 100%;
-}
-.flexbox .card-body,
-.grid .card-body {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-}
-.flexbox .card-description,
-.grid .card-description {
-  flex-grow: 1;
-}
-.card-dismiss {
+.column-dismiss {
   display: inline-block;
   color: blue;
   cursor: pointer;
 }
-.flexbox .card-dismiss,
-.grid .card-dismiss {
+.flexbox .column-dismiss {
   margin-top: auto;
 }
