--- a/grid-layout/css/layout.css
+++ b/grid-layout/css/layout.css
@@ -1,81 +1,77 @@
 @media (min-width: 601px) {
   body {
     display: grid;
-  }
-}
-@media (min-width: 601px) {
-  .default {
     grid-template-columns: auto 2fr auto;
     grid-template-rows: auto auto 1fr auto;
     grid-template-areas: "blue blue blue" "dark-blue dark-blue dark-blue" "yellow content dark-yellow" "yellow gray dark-yellow" "red red red";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt1 {
+@media (min-width: 651px) {
+  body {
     grid-template-columns: auto 2fr auto;
     grid-template-rows: auto auto 1fr auto;
     grid-template-areas: "blue blue blue" "dark-blue dark-blue dark-blue" "yellow content dark-yellow" "yellow gray gray" "red red red";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt2 {
+@media (min-width: 701px) {
+  body {
     grid-template-columns: auto 1fr 1fr;
     grid-template-rows: auto auto 1fr auto auto auto;
     grid-template-areas: "yellow blue blue" "yellow dark-blue dark-blue" "yellow content content" "yellow gray gray" "yellow dark-yellow dark-yellow" "yellow red red";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt3 {
+@media (min-width: 751px) {
+  body {
     grid-template-columns: 200px 1fr 1fr;
     grid-template-rows: auto 1fr auto auto auto;
     grid-template-areas: "dark-blue blue blue" "dark-blue content content" "dark-blue gray gray" "dark-blue yellow dark-yellow" "dark-blue red red";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt4 {
+@media (min-width: 801px) {
+  body {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto 1fr 1fr auto;
     grid-template-areas: "blue blue blue" "dark-blue dark-blue dark-blue" "content content content" "yellow gray dark-yellow" "red red red";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt5 {
+@media (min-width: 851px) {
+  body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto 1fr 1fr auto auto;
     grid-template-areas: "blue dark-blue dark-blue dark-blue" "content content gray gray" "yellow yellow dark-yellow dark-yellow" "red red red red";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt6 {
+@media (min-width: 901px) {
+  body {
     grid-template-columns: 300px 1fr 1fr;
     grid-template-areas: "gray . ." "content yellow dark-yellow" "content blue dark-blue" "content red red";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt7 {
+@media (min-width: 951px) {
+  body {
     grid-template-columns: .5fr 200px 1fr 1fr .5fr;
     grid-template-rows: 100px auto 2fr auto 1fr auto;
     grid-template-areas: ". gray . . ." ". dark-blue dark-blue dark-blue ." ". content content content ." ". blue blue blue ." ". yellow yellow dark-yellow ." ". red red red .";
     grid-gap: 0;
   }
 }
-@media (min-width: 601px) {
-  .alt8 {
+@media (min-width: 1001px) {
+  body {
     grid-template-columns: 50px 1fr 1fr 1fr 1fr 50px;
     grid-template-rows: 100px auto 1fr 1fr 100px;
     grid-template-areas: ". . . . . ." ". dark-blue dark-blue dark-blue dark-blue ." ". blue gray content content ." ". yellow dark-yellow dark-yellow red ." ". . . . . .";
     grid-gap: 15px;
   }
 }
-@media (min-width: 601px) {
-  .alt9 {
+@media (min-width: 1051px) {
+  body {
     grid-template-columns: minmax(1em, 1fr) minmax(0, 1fr) minmax(1em, 1fr);
     grid-template-rows: auto 500px 300px auto 500px auto auto;
     grid-template-areas: "dark-blue dark-blue dark-blue" "gray gray content" "red dark-yellow yellow" "blue blue blue";
