--- a/grid-layout/css/style.css
+++ b/grid-layout/css/style.css
@@ -34,6 +34,9 @@ body .red {
 .alt6 .dark-blue {
   display: block;
 }
+.dark-blue::before {
+  content: 'dark-blue';
+}
 .dark-blue a {
   color: #FFF;
 }
